// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser goto statements allows multiple goto statements on one line 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": 12,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 22,
            "line": 2,
          },
        },
        "statements": [
          Goto {
            "tokens": {
              "goto": {
                "isReserved": true,
                "kind": "Goto",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 20,
                    "line": 4,
                  },
                  "file": "",
                  "start": {
                    "column": 16,
                    "line": 4,
                  },
                },
                "text": "goto",
              },
              "label": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 28,
                    "line": 4,
                  },
                  "file": "",
                  "start": {
                    "column": 21,
                    "line": 4,
                  },
                },
                "text": "myLabel",
              },
            },
          },
          Goto {
            "tokens": {
              "goto": {
                "isReserved": true,
                "kind": "Goto",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 35,
                    "line": 4,
                  },
                  "file": "",
                  "start": {
                    "column": 31,
                    "line": 4,
                  },
                },
                "text": "goto",
              },
              "label": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 43,
                    "line": 4,
                  },
                  "file": "",
                  "start": {
                    "column": 36,
                    "line": 4,
                  },
                },
                "text": "myLabel",
              },
            },
          },
          Label {
            "tokens": {
              "colon": {
                "isReserved": false,
                "kind": "Colon",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 24,
                    "line": 5,
                  },
                  "file": "",
                  "start": {
                    "column": 23,
                    "line": 5,
                  },
                },
                "text": ":",
              },
              "identifier": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 23,
                    "line": 5,
                  },
                  "file": "",
                  "start": {
                    "column": 16,
                    "line": 5,
                  },
                },
                "text": "myLabel",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 19,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 6,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 15,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": 20,
          "line": 2,
        },
        "file": "",
        "start": {
          "column": 16,
          "line": 2,
        },
      },
      "text": "Main",
    },
  },
]
`;

exports[`parser goto statements detects labels 1`] = `
[
  Label {
    "tokens": {
      "colon": {
        "isReserved": false,
        "kind": "Colon",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": ":",
      },
      "identifier": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "SomeLabel",
      },
    },
  },
]
`;

exports[`parser goto statements parses standalone statement properly 1`] = `
{
  "errors": [],
  "statements": [
    Goto {
      "tokens": {
        "goto": {
          "isReserved": true,
          "kind": "Goto",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "goto",
        },
        "label": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "SomeLabel",
        },
      },
    },
  ],
}
`;
